fix: images too large for min viewpoint

--- a/src/assets/flickrgallery.css
+++ b/src/assets/flickrgallery.css
@@ -158,6 +158,7 @@
   .flickr-images img {
     width: auto;
     margin: 0;
+    max-width: 400px;
   }
   .img-default-size, .img-enlarged-size {
     transition: none;
